--- a/terraform/prod/terraform.tfvars.example
+++ b/terraform/prod/terraform.tfvars.example
@@ -6,3 +6,5 @@ public_key_path          = "~/.ssh/ubuntu.pub"
 subnet_id                = "example"
 service_account_key_file = "key.json"
 private_key              = "~/.ssh/ubuntu"
+app_disk_image           = "example"
+db_disk_image            = "example"
