--- a/packer/app.json
+++ b/packer/app.json
@@ -5,7 +5,7 @@
             "service_account_key_file": "{{user `key`}}",
             "folder_id": "{{user `id_folder`}}",
             "source_image_family": "{{user `image`}}",
-            "image_name": "reddit-base-app",
+            "image_name": "reddit-base-app-ansible",
             "image_family": "reddit-base",
             "ssh_username": "ubuntu",
             "platform_id": "standard-v1",
@@ -15,9 +15,8 @@
     ],
     "provisioners": [
         {
-            "type": "shell",
-            "script": "scripts/install_ruby.sh",
-            "execute_command": "sudo {{.Path}}"
+            "type": "ansible",
+            "playbook_file": "../ansible/packer_app.yml"
         }
     ]
 }
